# matilda

./: .gitignore  AGENTS.md  Dockerfile  Gemfile  README.md  docker-compose.example.yml
.github/workflows/: ci.yml
app/controllers/: apis_controller.rb  application_controller.rb  authentication_controller.rb  credentials_controller.rb  folders_controller.rb  posts_controller.rb  presentations_controller.rb  procedures_controller.rb  projects_controller.rb  settings_controller.rb  slack_controller.rb  tasks_controller.rb  tools_controller.rb  users_controller.rb  vectorsearch_controller.rb
app/helpers/: application_helper.rb  tasks_helper.rb
app/javascript/: application.js
app/jobs/: active_storage_cleaner_job.rb  notifications_manager_job.rb  procedures_status_automations_manager_job.rb  tasks_repeat_manager_job.rb
app/mailers/: application_mailer.rb
app/models/: application_record.rb  credential.rb  folder.rb  folders.rb  global_cache.rb  notification.rb  post.rb  presentation.rb  presentations.rb  procedure.rb  procedures.rb  project.rb  setting.rb  task.rb  tasks.rb  user.rb  vectorsearch.rb
app/services/: project_risk_report.rb  slack_service.rb
config/: application.rb  importmap.rb  routes.rb  storage.yml
db/: schema.rb  seeds.rb
docs/: CNAME  PROMPT.md  index.html
opencode-integration/: INSTRUCTIONS.md  README.md  config.json  install.sh  main.js  pyproject.toml
opencode-integration/src/: cli.py  config.py  daemon.py  database.py  matilda_api.py  opencode.py
public/: 404.html  422.html  500.html  manifest.json
test/: test_helper.rb
(+496 files in other folders)
