[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "matilda-opencode"
version = "1.0.0"
description = "Daemon CLI che integra l'API di Matilda con OpenCode"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
matilda-opencode = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
